adds an enpoint to update products data
