# app/Http/Controllers/ProductController.php
@@ -3,8 +3,8 @@
 namespace App\Http\Controllers;
 
 use App\Enums\ProductStatus;
+use App\Http\Requests\UpdateProductRequest;
 use App\Models\Product;
-use Illuminate\Http\Request;
 use Symfony\Component\HttpFoundation\Response;
 
 class ProductController extends Controller
@@ -24,11 +24,6 @@ class ProductController extends Controller
             ->paginate(6);
 
         return response()->json(['products' => $products], Response::HTTP_OK);
-    }
-
-    public function store(Request $request)
-    {
-        //
     }
 
     /**
@@ -56,21 +51,125 @@ class ProductController extends Controller
      *   )
      * )
      */
-    public function show(Product $product)
+    public function show(int $code)
     {
+        $product = Product::query()->find($code);
+        if (!$product) {
+            return response()->json(['message' => 'product not found'], Response::HTTP_NOT_FOUND);
+        }
         return response()->json(['product' => $product], Response::HTTP_OK);
     }
 
-    public function update(Request $request, $id)
+    /**
+     * @OA\Put(
+     *   tags={"Products"},
+     *   path="/api/products/{code}",
+     *   summary="Updates a product",
+     *   description="Updates a single product based on a code",
+     *    @OA\Parameter(
+     *     name="code",
+     *     description="product code",
+     *     required=true,
+     *     in="path",
+     *     @OA\Schema(
+     *         type="integer"
+     *     )
+     *   ),
+     *   @OA\RequestBody(
+     *     required=true,
+     *     @OA\JsonContent(
+     *       type="object",
+     *       @OA\Property(
+     *         property="status", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="url", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="creator", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="product_name", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="quantity", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="brands", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="categories", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="labels", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="cities", type="string",
+     *       ),
+     *        @OA\Property(
+     *         property="purchase_places", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="stores", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="ingredients_text", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="traces", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="serving_size", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="serving_quantity", type="number",
+     *       ),
+     *       @OA\Property(
+     *         property="nutriscore_score", type="number",
+     *       ),
+     *       @OA\Property(
+     *         property="nutriscore_grade", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="main_category", type="string",
+     *       ),
+     *       @OA\Property(
+     *         property="image_url", type="string",
+     *       ),
+     *     )
+     *   ),
+     *   @OA\Response(
+     *     response=200,
+     *     description="OK",
+     *   ),
+     *   @OA\Response(
+     *     response=404, 
+     *     description="Not Found"
+     *   ),
+     *   @OA\Response(
+     *     response=422, 
+     *     description="Unprocessable Entity"
+     *   )
+     * )
+     */
+    public function update(UpdateProductRequest $request, $code)
     {
-        //
+        $product = Product::query()->find($code);
+
+        if (!$product) {
+            return response()->json(['message' => 'product not found'], Response::HTTP_NOT_FOUND);
+        }
+
+        $product->update($request->validated());
+
+        return response()->json(['product' => $product], Response::HTTP_OK);
     }
 
     /**
      * @OA\Delete(
      *   tags={"Products"},
      *   path="/api/products/{code}",
-     *   summary="Delete a product",
+     *   summary="Deletes a product",
      *   description="Marks a product as trash",
      *   @OA\Parameter(
      *     name="code",
